force-app/main/default/objects/cgcloud__Job_Definition_Template__c/cgcloud__Job_Definition_Template__c.object-meta.xml
<CustomObject>
    <description>Holds the definition of questions / product surveys that are available in the system.</description>
    <label>Job Definition Template</label>
    <nameField>
        <label>Job Definition Template Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Job Definition Templates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>