force-app/main/default/objects/cgcloud__Job_Definition_Template__c/fields/cgcloud__Competitor_Relevant__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Competitor_Relevant__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Competitor Relevant</label>
    <type>Checkbox</type>
</CustomField>