force-app/main/default/objects/cgcloud__Job_Definition_Template__c/fields/cgcloud__Consider_Max_Value__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Consider_Max_Value__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Consider Max Value</label>
    <type>Checkbox</type>
</CustomField>