force-app/main/default/objects/cgcloud__Job_Definition_Template__c/fields/cgcloud__Data_Type__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Data_Type__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Data Type</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>$Source.cgcloud__Sales_Org__c</field>
            <operation>equals</operation>
            <valueField>cgcloud__Data_Type__c.cgcloud__Sales_Org__c</valueField>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>cgcloud__Data_Type__c</referenceTo>
    <relationshipLabel>Job Definition Templates</relationshipLabel>
    <relationshipName>Job_Definition_Templates</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>