force-app/main/default/objects/cgcloud__Job_Definition_Template__c/fields/cgcloud__Job_Template__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Job_Template__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Job Template</label>
    <referenceTo>cgcloud__Job_Template__c</referenceTo>
    <relationshipLabel>Job Definition Templates</relationshipLabel>
    <relationshipName>Job_Definition_Templates</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>