force-app/main/default/objects/cgcloud__Job_Definition_Template__c/fields/cgcloud__Max_Date_Policy__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Max_Date_Policy__c</fullName>
    <description>Controls validation of date fields when answering questions or surveys on CGCloud OnPremise mobile devices</description>
    <label>Max Date Policy</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>MinDate</fullName>
            </value>
            <value>
                <fullName>MaxDate</fullName>
            </value>
            <value>
                <fullName>Today</fullName>
            </value>
            <value>
                <fullName>NextYear</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>