force-app/main/default/objects/cgcloud__Job_Definition_Template__c/fields/cgcloud__Max_Value__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Max_Value__c</fullName>
    <label>Max Value</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>