force-app/main/default/objects/cgcloud__Job_Definition_Template__c/fields/cgcloud__Measure_Type__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Measure_Type__c</fullName>
    <label>Measure Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Store</fullName>
                <default>true</default>
                <label>Store</label>
            </value>
            <value>
                <fullName>POS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>