force-app/main/default/objects/cgcloud__Job_Definition_Template__c/fields/cgcloud__Perfect_Store_Question__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Perfect_Store_Question__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Defines if question must be considered relevant for perfect store index determination of a call.</description>
    <inlineHelpText>Defines if question must be considered relevant for perfect store index determination of a call.</inlineHelpText>
    <label>Perfect Store Question</label>
    <type>Checkbox</type>
</CustomField>