force-app/main/default/objects/cgcloud__Job_Definition_Template__c/fields/cgcloud__Picture_Taking__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Picture_Taking__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Picture Taking</label>
    <type>Checkbox</type>
</CustomField>