force-app/main/default/objects/cgcloud__Job_Definition_Template__c/fields/cgcloud__Primary_Survey_Policy__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Primary_Survey_Policy__c</fullName>
    <description>Allows specification of three primary product survey questions used for discrepancy survey in a matrix like display on the CGCloud OnPremise mobility devices.
      Supported survey questions: Facings, Price, Distribution</description>
    <label>Primary Survey Policy</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Facings</fullName>
            </value>
            <value>
                <fullName>PriceSurvey</fullName>
            </value>
            <value>
                <fullName>Distribution</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>