force-app/main/default/objects/cgcloud__Job_Definition_Template__c/fields/cgcloud__Product_Reference__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Product_Reference__c</fullName>
    <formula>cgcloud__Job_Template__r.cgcloud__Product_Reference__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product Reference</label>
    <type>Checkbox</type>
</CustomField>