force-app/main/default/objects/cgcloud__Job_Definition_Template__c/fields/cgcloud__Sort__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Sort__c</fullName>
    <description>Used for sorting, e.g. when manually adding questions during call execution on CGCloud OnPremise mobile solution</description>
    <label>Sort</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
    <unique>true</unique>
</CustomField>