force-app/main/default/objects/cgcloud__Job_Definition_Template__c/fields/cgcloud__Step_Size__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Step_Size__c</fullName>
    <description>Controls stepper for numeric fields when answering questions or surveys on CGCloud OnPremise mobile devices</description>
    <label>Step Size</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>