force-app/main/default/objects/cgcloud__Job_Definition_Template__c/fields/cgcloud__Survey_Identification__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Survey_Identification__c</fullName>
    <description>This field is used by mobility to store survey identification values</description>
    <label>Survey Identification</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Facings</fullName>
            </value>
            <value>
                <fullName>Price</fullName>
            </value>
            <value>
                <fullName>Distribution</fullName>
            </value>
            <value>
                <fullName>POS Facings</fullName>
            </value>
            <value>
                <fullName>POS Price</fullName>
            </value>
            <value>
                <fullName>POS Distribution</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>