force-app/main/default/objects/cgcloud__Job_Definition_Template__c/fields/cgcloud__Target_Value_Column__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Target_Value_Column__c</fullName>
    <description>Specifies the source for target values, if required, taken from authorization list.
      Target values are used as presetting of product survey answers for carrying out discrepancy surveys.</description>
    <label>Target Value Column</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>0</fullName>
            </value>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>