force-app/main/default/objects/cgcloud__Job_Definition_Template__c/fields/cgcloud__Use_Stepper__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Use_Stepper__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Controls stepper for numeric fields when answering questions or surveys on CGCloud OnPremise mobile devices</description>
    <label>Use Stepper</label>
    <type>Checkbox</type>
</CustomField>