force-app/main/default/objects/cgcloud__Job_Definition_Template__c/validationRules/cgcloud__Avoid_POS_Surveys.validationRule-meta.xml
<ValidationRule>
    <fullName>cgcloud__Avoid_POS_Surveys</fullName>
    <active>true</active>
    <errorConditionFormula>TEXT(cgcloud__Measure_Type__c) == &apos;POS&apos; &amp;&amp; cgcloud__Job_Template__r.cgcloud__Product_Reference__c==true</errorConditionFormula>
    <errorMessage>POS Surveys can&apos;t be created.</errorMessage>
</ValidationRule>