force-app/main/default/objects/cgcloud__Job_Definition_Template__c/validationRules/cgcloud__Consider_Max_Value.validationRule-meta.xml
<ValidationRule>
    <fullName>cgcloud__Consider_Max_Value</fullName>
    <active>true</active>
    <description>The Max Value can&apos;t be empty.</description>
    <errorConditionFormula>cgcloud__Consider_Max_Value__c &amp;&amp;
      ISNULL(cgcloud__Max_Value__c)</errorConditionFormula>
    <errorDisplayField>cgcloud__Max_Value__c</errorDisplayField>
    <errorMessage>The Max Value can&apos;t be empty.</errorMessage>
</ValidationRule>