force-app/main/default/objects/cgcloud__Job_Definition_Template__c/validationRules/cgcloud__Consider_Min_Value.validationRule-meta.xml
<ValidationRule>
    <fullName>cgcloud__Consider_Min_Value</fullName>
    <active>true</active>
    <description>The Min Value can&apos;t be empty.</description>
    <errorConditionFormula>cgcloud__Consider_Min_Value__c &amp;&amp; ISNULL(cgcloud__Min_Value__c)</errorConditionFormula>
    <errorDisplayField>cgcloud__Min_Value__c</errorDisplayField>
    <errorMessage>The Min Value can&apos;t be empty.</errorMessage>
</ValidationRule>