force-app/main/default/objects/cgcloud__Job_Definition_Template__c/validationRules/cgcloud__Consider_Value.validationRule-meta.xml
<ValidationRule>
    <fullName>cgcloud__Consider_Value</fullName>
    <active>true</active>
    <description>If both Consider Min Value and Consider Max Value are used:
      MinValue &lt;= MaxValue</description>
    <errorConditionFormula>cgcloud__Consider_Min_Value__c &amp;&amp;
      cgcloud__Consider_Max_Value__c &amp;&amp;
      cgcloud__Min_Value__c &gt; cgcloud__Max_Value__c</errorConditionFormula>
    <errorMessage>The Min Value must be lower or equal than Max Value.</errorMessage>
</ValidationRule>