force-app/main/default/objects/cgcloud__Job_Definition_Template__c/validationRules/cgcloud__Data_Type_Job_Template.validationRule-meta.xml
<ValidationRule>
    <fullName>cgcloud__Data_Type_Job_Template</fullName>
    <active>true</active>
    <description>The Data Type and the Job Template can&apos;t be edited after Job Definition Template creation.</description>
    <errorConditionFormula>ISCHANGED(cgcloud__Data_Type__c) || ISCHANGED(cgcloud__Job_Template__c)</errorConditionFormula>
    <errorMessage>The Data Type and the Job Template can&apos;t be edited after Job Definition Template creation.</errorMessage>
</ValidationRule>