force-app/main/default/objects/cgcloud__Job_Definition_Template__c/validationRules/cgcloud__Description.validationRule-meta.xml
<ValidationRule>
    <fullName>cgcloud__Description</fullName>
    <active>false</active>
    <description>You must select at least one Lenguage Dependet Field.</description>
    <errorConditionFormula>ISBLANK(cgcloud__Description_Language_1__c)
      &amp;&amp;
      ISBLANK(cgcloud__Description_Language_2__c)
      &amp;&amp;
      ISBLANK(cgcloud__Description_Language_3__c)</errorConditionFormula>
    <errorMessage>You must select at least one Lenguage Dependet Field.</errorMessage>
</ValidationRule>