force-app/main/default/objects/cgcloud__Job_Definition_Template__c/listViews/cgcloud__All.listView-meta.xml
<ListView>
    <fullName>cgcloud__All</fullName>
    <columns>NAME</columns>
    <columns>cgcloud__Active__c</columns>
    <columns>cgcloud__Description__c</columns>
    <columns>cgcloud__Job_Template__c</columns>
    <columns>cgcloud__Sales_Org__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>cgcloud__Active__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>cgcloud__Sales_Org__c</field>
        <operation>equals</operation>
        <value>0001</value>
    </filters>
    <label>All</label>
</ListView>